@@ -1,4 +1,9 @@
 2007-06-18  Brian Matherly  <brian@gramps-project.org>
+	* src/plugins/DetDescendantReport.py:
+	* src/plugins/DetAncestralReport.py:
+	  Fix death source reference.
+
+2007-06-18  Brian Matherly  <brian@gramps-project.org>
 	* src/DbManager.py: make path recursive. Make default db dir consistent.
 
 2007-06-18  Don Allingham  <don@gramps-project.org>
